test/pass/kind.sest
module Kind = struct

  module Impl = struct
    type t = {foo : int, bar : bool}
    let v() = {foo = 42, bar = true}
  end

  include Impl :> sig
    type t :: o
    val v : fun() -> t
  end

end
